unpackaged/main/default/objects/BusinessAccount/BusinessAccount.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>