unpackaged/main/default/objects/BusinessAccount/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Student Birth Date</label>
    <type>Date</type>
</CustomField>