unpackaged/main/default/objects/BusinessAccount/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>