unpackaged/main/default/objects/BusinessAccount/fields/Military_Experience__c.field-meta.xml
<CustomField>
    <fullName>Military_Experience__c</fullName>
    <description>added for CASE 56627 (part 2)</description>
    <label>Military Experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
                <isActive>false</isActive>
                <label>Veteran</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>