unpackaged/main/default/objects/BusinessAccount/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <color>#33FF33</color>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Graduate</fullName>
                <color>#33CCFF</color>
                <label>Graduate</label>
            </value>
            <value>
                <fullName>Did Not Graduate</fullName>
                <color>#FF0000</color>
                <label>Did Not Graduate</label>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
                <color>#000000</color>
                <label>Leave of Absence</label>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
                <color>#993399</color>
                <label>Withdrawal</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <color>#3333FF</color>
                <label>No Show</label>
            </value>
            <value>
                <fullName>No Show 2 wk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>